--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,215 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+}
+a {
+  text-decoration: none;
+}
+.App {
+  height: 100vh;
+  width: 100vw;
+  transition: all 0.2s ease-in-out;
+}
+label {
+  color: #fff;
+  opacity: 0.7;
+  font-size: 14px;
+}
+.dashboard-container {
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.loading {
+  overflow: hidden;
+}
+
+.sidebar {
+  background-color: #1f213a;
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100px;
+  height: 100vh;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  justify-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 999;
+}
+.sidebar .upper-container {
+  width: 100%;
+  border-radius: 2px;
+  background-color: #7c5df9;
+}
+.sidebar .lower-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 1rem;
+  position: relative;
+  width: 100%;
+}
+.sidebar .lower-container::after {
+  content: " ";
+  background-color: rgba(174, 174, 174, 0.5);
+  height: 1px;
+  width: 100%;
+  position: absolute;
+  top: 39%;
+  right: 0;
+}
+
+/* // Sidebar Mobile */
+
+.mobileNavSideBar {
+  top: 0%;
+  height: 80px;
+  width: 100%;
+  background: #1f213a;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.mobile {
+  position: relative;
+}
+
+.mobileNavUpperContainer {
+  width: 110px;
+  background-color: #7c5df9;
+}
+
+.mobileNavLowerContainer {
+  width: 100%;
+  height: 100%;
+  padding: 0 1rem;
+  gap: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.mobileNavLowerContainer::after {
+  content: " ";
+  background-color: rgba(201, 201, 201, 0.5);
+  width: 1px;
+  height: 80px;
+  position: absolute;
+  top: 0%;
+  right: 82px;
+}
+
+.form-container {
+  height: 100%;
+  position: fixed;
+  max-width: 100%;
+  background-color: #141625;
+  transition: left 0.2s ease-in-out;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  padding: 0 1rem;
+  overflow: auto;
+}
+.form-container::-webkit-scrollbar {
+  background: #333;
+  width: 5px;
+}
+.form-container::-webkit-scrollbar-thumb {
+  background: #7c5df9;
+}
+
+.bill-from-container,
+.bill-to-container {
+  padding: 1rem;
+}
+
+.bill-from-container {
+  padding-bottom: 1rem;
+}
+
+.bill-from-container h3,
+.bill-to-container h3 {
+  font-size: 0.8rem;
+  color: #7c5df9;
+}
+.bill-from-container input,
+.bill-to-container input,
+.invoice-date input,
+.payment-terms input,
+.description-from input,
+.item-name-from input,
+.item-qty-from input,
+.item-price-from input,
+.item-total-from input {
+  background-color: #1f213a;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  padding-left: 0.5rem;
+  color: #fff;
+  max-width: 100%;
+}
+
+.street-address-to,
+.city-to,
+.post__code-to,
+.country-to,
+.client-name,
+.client-email,
+.street-address-to,
+.street-address-from,
+.city-from,
+.post__code-from,
+.country-from,
+.invoice-info-container,
+.description-from {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  margin-bottom: 1.5rem;
+}
+
+.invoice-date label,
+.payment-terms label {
+  display: inline-block;
+}
+
+.invoice-info-container select {
+  background-color: #1f213a;
+  height: 50px;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  padding-left: 0.5rem;
+  color: #fff;
+  width: 100%;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(100%);
+  font-size: 1.3rem;
+  position: relative;
+  right: 0.2rem;
+}
+
+@media screen and (max-width: 500px) {
+  .from-footer > * {
+    margin: 0 !important;
+    font-size: 0.6rem !important;
+  }
+  .from-footer button {
+    margin: 0 !important;
+    font-size: 0.6rem !important;
+  }
 }
