--- a/src/Components/UserAuth/signup.css
+++ b/src/Components/UserAuth/signup.css
@@ -1,118 +1,112 @@
-.signup-background{
-    content: "";
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: -1;
-    min-width: 100vw;
-    min-height: 100vh;
-    top: 0 ;
-    left: 0 ;
-    background: linear-gradient(90deg, rgba(182,178,255,1) 0%, rgba(166,198,204,1) 100%);
-
+.signup-background {
+  content: "";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+  min-width: 100vw;
+  min-height: 100vh;
+  top: 0;
+  left: 0;
+  background: linear-gradient(90deg, rgba(182, 178, 255, 1) 0%, rgba(166, 198, 204, 1) 100%);
 }
-.signup-container{
-    width: 450px;
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4.5px );
-    -webkit-backdrop-filter: blur( 4.5px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    position: absolute;
-    width: 450px;
-    border-radius: 5px;
-    overflow: hidden;
-    padding: 77px 50px 30px 50px;
-    text-align: center;
+.signup-container {
+  width: 450px;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  position: absolute;
+  border-radius: 5px;
+  overflow: hidden;
+  padding: 30px 50px;
+  text-align: center;
 }
-.signup-container h1{
-    margin-bottom: 2rem;
-    color: #333
+.signup-container h1 {
+  margin-bottom: 2rem;
+  color: #333;
 }
-.signup-container form{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-
+.signup-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
 }
 
-.signup-container form > input{
-    font-size: 18px;
-    line-height: 1.2;
-    color: #686868;
-    display: block;
-    width: 100%;
-    background: #fff;
-    height: 62px;
-    border-radius: 3px;
-    padding: 10px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-
+.signup-container form > input {
+  font-size: 18px;
+  line-height: 1.2;
+  color: #686868;
+  display: block;
+  width: 100%;
+  background: #fff;
+  height: 62px;
+  border-radius: 3px;
+  padding: 10px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
 }
 
-.signup-container .signup-remmberme{
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    justify-content: flex-start;
+.signup-container .signup-remmberme {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  justify-content: flex-start;
 }
 
-.signup-container .signup-btn{
-    font-size: 1.4rem;
-    line-height: 1.5;
-    color: #fff;
-    text-transform: uppercase;
-    width: 100%;
-    height: 62px;
-    border-radius: 3px;
-    background: #d33f8d;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 25px;
-    -webkit-transition: all .4s;
-    -o-transition: all .4s;
-    -moz-transition: all .4s;
-    transition: all .4s;
-    border:none;
-    margin-bottom: 1rem;
-    border-radius: 5px;
-
+.signup-container .signup-btn {
+  font-size: 1.4rem;
+  line-height: 1.5;
+  color: #fff;
+  text-transform: uppercase;
+  width: 100%;
+  height: 62px;
+  border-radius: 3px;
+  background: #d33f8d;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 25px;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+  border: none;
+  margin-bottom: 1rem;
+  border-radius: 5px;
 }
-.signup-container h4{
-    margin-bottom: 1.5rem;
-    color: #333
-
+.signup-container h4 {
+  margin-bottom: 1.5rem;
+  color: #333;
 }
-.btn{
-    font-size: 16px;
-    line-height: 1.2;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: calc((100% - 10px)/2);
-    height: 40px;
-    border-radius: 3px;
-    border: 1px solid #e6e6e6;
-    background-color: #fff;
-    -webkit-transition: all .4s;
-    -o-transition: all .4s;
-    -moz-transition: all .4s;
-    transition: all .4s;
+.btn {
+  font-size: 16px;
+  line-height: 1.2;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: calc((100% - 10px) / 2);
+  height: 40px;
+  border-radius: 3px;
+  border: 1px solid #e6e6e6;
+  background-color: #fff;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
 }
-.signup-btn{
-    cursor: pointer;
-    color:#d33f8d;
+.signup-btn {
+  cursor: pointer;
+  color: #d33f8d;
 }
