--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 a {
   text-decoration: none;
 }
+
 .App {
   height: 100vh;
   width: 100vw;
@@ -150,8 +151,8 @@ label {
 .item-price-from input,
 .item-total-from input {
   height: 50px;
-  border: none;
   border-radius: 5px;
+  border: none;
   outline: none;
   padding-left: 0.5rem;
   color: #fff;
@@ -198,11 +199,12 @@ label {
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
-  filter: invert(100%);
+  filter: invert(50%);
   font-size: 1.3rem;
   position: relative;
   right: 0.2rem;
 }
+
 .invoice-action-header button:nth-child(1) {
   background-color: #10121d;
 }
@@ -244,4 +246,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 input::-webkit-date-and-time-value {
   text-align: left;
+}
+
+input:focus {
+  border: 1px solid #7c5df9 !important;
+}
+.profile-overlay a:hover {
+  background-color: #7c5df9;
+  transition: all 0.2s ease-in;
 }
