--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,10 @@ a {
 }
 
 .App {
-  height: 100vh;
-  width: 100vw;
   transition: all 0.2s ease-in-out;
+  min-height: 100vh;
 }
+
 label {
   color: #fff;
   opacity: 0.7;
@@ -217,9 +217,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .invoice-action-header button:nth-child(3) {
   background-color: #9277ff;
 }
-.edit-btn {
-  background-color: #10121d !important;
-}
+
 .delete-btn {
   background-color: rgb(209, 86, 86) !important;
 }
