--- a/src/Components/UserAuth/login.css
+++ b/src/Components/UserAuth/login.css
@@ -1,17 +1,19 @@
-.login-background {
+.login-background,
+.reset-background {
   content: "";
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: -1;
-  min-width: 100vw;
+  width: 100vw;
   height: 100vh;
   top: 0;
   left: 0;
   overflow: hidden;
   background: linear-gradient(90deg, rgba(182, 178, 255, 1) 0%, rgba(166, 198, 204, 1) 100%);
 }
-.login-container {
+.login-container,
+.reset-container {
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4.5px);
@@ -19,24 +21,29 @@
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   position: absolute;
-  width: 450px;
+  min-width: 330px;
+  margin: 0 0.5rem;
   border-radius: 5px;
   overflow: hidden;
-  padding: 30px 50px;
+  padding: 30px;
   text-align: center;
 }
-.login-container h1 {
+.login-container h1,
+.reset-container {
   margin-bottom: 2rem;
   color: #333;
 }
-.login-container form {
+.login-container form,
+.reset-container form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem;
+  width: 100%;
 }
 
-.login-container form > input {
+.login-container form > input,
+.password-input,
+.reset-container form > input {
   font-size: 18px;
   line-height: 1.2;
   color: #686868;
@@ -51,14 +58,16 @@
   border-radius: 5px;
 }
 
-.login-container .login-remmberme {
+.login-container .login-remember {
+  all: unset;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-  justify-content: flex-start;
+  padding: 0 5px;
+  justify-content: space-between;
 }
 
-.login-container .login-btn {
+.login-container .login-btn,
+.backHomeBtnStyle {
   font-size: 1.4rem;
   line-height: 1.5;
   color: #fff;
@@ -82,6 +91,23 @@
   border: none;
   margin-bottom: 1rem;
   border-radius: 5px;
+}
+.backHomeBtnStyle {
+  width: 60px;
+  font-size: 1rem;
+  height: 30px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-self: center;
+  align-self: center;
+  border-radius: 3px;
+
+  align-self: flex-end;
+}
+.reset-btn:hover {
+  opacity: 0.8;
+  transition: all 0.1s ease-in;
 }
 .login-container h4 {
   margin-bottom: 1.5rem;
