--- a/src/Components/UserAuth/signup.css
+++ b/src/Components/UserAuth/signup.css
@@ -11,7 +11,7 @@
   background: linear-gradient(90deg, rgba(182, 178, 255, 1) 0%, rgba(166, 198, 204, 1) 100%);
 }
 .signup-container {
-  width: 450px;
+  min-width: 330px;
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4.5px);
@@ -21,7 +21,8 @@
   position: absolute;
   border-radius: 5px;
   overflow: hidden;
-  padding: 30px 50px;
+  padding: 10px 0;
+  margin: 0 1rem;
   text-align: center;
 }
 .signup-container h1 {
