--- a/src/index.css
+++ b/src/index.css
@@ -257,6 +257,10 @@ input::-webkit-date-and-time-value {
 input:focus {
   border: 1px solid #7c5df9 !important;
 }
+.profile-overlay {
+  backdrop-filter: "blur(5px)";
+  -webkit-backdrop-filter: blur(5px);
+}
 .profile-overlay a:hover {
   background-color: #7c5df9;
   transition: all 0.2s ease-in;
