--- a/src/Components/UserAuth/login.css
+++ b/src/Components/UserAuth/login.css
@@ -10,7 +10,11 @@
   top: 0;
   left: 0;
   overflow: hidden;
-  background: linear-gradient(90deg, rgba(182, 178, 255, 1) 0%, rgba(166, 198, 204, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(182, 178, 255, 1) 0%,
+    rgba(166, 198, 204, 1) 100%
+  );
 }
 .login-container,
 .reset-container {
@@ -21,15 +25,14 @@
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   position: absolute;
-  min-width: 330px;
-  margin: 0 0.5rem;
+  width: 350px;
   border-radius: 5px;
   overflow: hidden;
-  padding: 30px;
+  padding: 15px 15px 10px 15px;
   text-align: center;
 }
 .login-container h1,
-.reset-container {
+.reset-container h1 {
   margin-bottom: 2rem;
   color: #333;
 }
@@ -38,7 +41,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 100%;
+  max-width: 100%;
 }
 
 .login-container form > input,
@@ -48,7 +51,7 @@
   line-height: 1.2;
   color: #686868;
   display: block;
-  width: 100%;
+  width: 320px;
   background: #fff;
   height: 62px;
   border-radius: 3px;
@@ -57,7 +60,9 @@
   border: none;
   border-radius: 5px;
 }
-
+.reset-container form > input {
+  width: 100%;
+}
 .login-container .login-remember {
   all: unset;
   display: flex;
@@ -109,6 +114,7 @@
   opacity: 0.8;
   transition: all 0.1s ease-in;
 }
+
 .login-container h4 {
   margin-bottom: 1.5rem;
   color: #333;
