--- a/src/Components/UserAuth/signup.css
+++ b/src/Components/UserAuth/signup.css
@@ -8,10 +8,14 @@
   min-height: 100vh;
   top: 0;
   left: 0;
-  background: linear-gradient(90deg, rgba(182, 178, 255, 1) 0%, rgba(166, 198, 204, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(182, 178, 255, 1) 0%,
+    rgba(166, 198, 204, 1) 100%
+  );
 }
 .signup-container {
-  min-width: 330px;
+  width: 350px;
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4.5px);
@@ -21,8 +25,7 @@
   position: absolute;
   border-radius: 5px;
   overflow: hidden;
-  padding: 10px 0;
-  margin: 0 1rem;
+  padding: 5px;
   text-align: center;
 }
 .signup-container h1 {
@@ -34,6 +37,7 @@
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
+  max-width: 100%;
 }
 
 .signup-container form > input {
